Improve responsiveness and fix the abnormal screen stretching made by containers in small device viewport

--- a/style.css
+++ b/style.css
@@ -58,20 +58,14 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 30px;
 
 }
 
 
 
 
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 30px;
-}
+
+
 
 .container#blur.active {
     filter: blur(10px);
@@ -282,6 +276,19 @@ footer p {
         border-image-slice: 1;
     }
 
+    main {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 30px;
+    
+    }
+
+    .container{
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 30px;
+    }
+
     .hiya-message-container {
         display: flex;
         flex-grow: 1;
@@ -331,8 +338,6 @@ footer p {
     }
     .main-container {
         display: flex;
-        
-        /*justify-content: space-evenly;*/
     }
     .desc-text {
         font-size: 28px;
@@ -386,6 +391,19 @@ footer p {
         border-image-slice: 1;
     }
 
+    main {
+        max-width: 100vw;
+        width: 100vw;
+        margin: 0 auto;
+        padding: 0 0;
+    
+    }
+
+    .container{
+        max-width: 100vw;
+        margin: 0 auto;
+    }
+
     .hiya-message-container {
         display: flex;
         flex-grow: 1;
@@ -419,6 +437,7 @@ footer p {
         border: 2px solid; border-image: linear-gradient(to bottom, rgba(1, 255, 255, 1), rgba(0, 234, 255, 0.455)); 
         border-image-slice: 1;
     }
+    
     .main-container {
         display: flex;
         flex-direction: column;
